View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025011 | Community | OCCT:Modeling Data | public | 2014-06-16 18:17 | 2014-11-11 12:52 |
Reporter | drazmyslovich | Assigned To | apn | ||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025011: IntAna_QuaQuadGeo can crash with out-of-bounds exception | ||||
Description | Due to the unchecked number of solutions, returned by the intersector object, IntAna_QuadQuadGeo::Perform function can crash with out-of-bounds exception. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
Date Modified | Username | Field | Change |
---|---|---|---|
2014-06-16 18:17 | drazmyslovich | New Issue | |
2014-06-16 18:17 | drazmyslovich | Assigned To | => drazmyslovich |
2014-06-16 18:19 | drazmyslovich | Note Added: 0029784 | |
2014-06-16 18:19 | drazmyslovich | Status | new => resolved |
2014-06-16 18:23 | abv | Assigned To | drazmyslovich => ifv |
2014-06-19 13:15 | apn | Note Added: 0029829 | |
2014-06-19 13:16 | apn | Assigned To | ifv => bugmaster |
2014-06-19 13:16 | apn | Status | resolved => reviewed |
2014-06-19 13:16 | apn | Test case number | => Not needed |
2014-06-19 13:16 | apn | Status | reviewed => tested |
2014-06-19 13:16 | apn | Target Version | Unscheduled => 6.8.0 |
2014-06-20 12:54 | apn | Changeset attached | => occt master a060129f |
2014-06-20 12:54 | apn | Assigned To | bugmaster => apn |
2014-06-20 12:54 | apn | Status | tested => verified |
2014-06-20 12:54 | apn | Resolution | open => fixed |
2014-11-11 12:46 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:52 |
|
Status | verified => closed |