0025011: IntAna_QuaQuadGeo can crash with out-of-bounds exception

Fix the crash in IntAna_QuadQuadGeo by checking the number of intersections